fixed login page

--- a/language/global.ar.json
+++ b/language/global.ar.json
@@ -129,6 +129,10 @@
   "notifications":"الاشعارات",
   "name":"الاسم",
   "create_account":"انشيء حسابك",
-  "mark_read":"وضع الكل كتم قرائته"
+  "mark_read":"وضع الكل كتم قرائته",
+  "Sign_In":"تسجيل الدخول  ",
+  "With_Social":"باستخدام حساب التواصل الإجتماعي  ",
+  "Prag_An_easier":"هي طريقه سهله لتسجيل الدخول دون الحاجه إلى تذكر كلمة السر والبريد الإلكتروني",
+  "OrWithYourEmail":"أو عن طريق البريد الإلكتروني"
 
 }
